# miniguide

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: Section.cpp  Section.h  details.cpp  details.hpp  intrinsic.hpp  layout.cpp  layout.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  parser.cpp  parser.hpp
